--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <footer>
             <div class="container">
-                <p>Todos os direitos reservados</p>
+                <p>Todos os direitos reservados - Jonatas S.A</p>
             </div>
         </footer>
     </main>
