--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="carrinho-compras">
                     <div>
                         <input type="text" name="pesquisa" id="local-pesquisa" placeholder="Digite aqui sua pesquisa">
-                        <button type="submit" class="botao-pesquisar">Pesquisar</button>
+                        <button type="button" id="botao-pesquisar" class="botao-pesquisar">Pesquisar</button>
                     </div>
                     <h3 id="carrinhotitulo">Carrinho de compras</h3>
                         <ul class="carrinho-vazio carrinho-com-itens">
